objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Admin_del__c</fullName>
        <formula>Related_Opportunity__r.Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anwalt__c</fullName>
        <formula>Related_Opportunity__r.Legal__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anwalt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Anhänge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BCC_Address__c</fullName>
        <label>BCC Adresse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <label>CC Adresse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Notiz</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Record_Type_Id__c</fullName>
        <formula>IF( RecordTypeId = '0120Y0000005loL', '0121r000000Mx53',  IF( RecordTypeId = '0120Y0000005loM', '0121r000000Mx5b', IF( RecordTypeId = '0120Y0000005loN', '0121r000000Mx5m','0121r000000Mx5m' )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, task is a follow-up task</description>
        <label>Wiedervorlagetask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>Absenderadresse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>Absendername</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eingehend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kommentar__c</fullName>
        <formula>Related_Opportunity__r.Comment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kommentar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kunde_nicht_erreicht__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kunde nicht erreicht</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Activity_ID__c</fullName>
        <label>Old Activity ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overdue_Since__c</fullName>
        <formula>IF((Today() - ActivityDate &lt; 0),0,Today() - ActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Überfälligkeit in Tagen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + ' ' + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <formula>Text(Related_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Assignment_Type__c</fullName>
        <formula>TEXT(Related_Opportunity__r.Assignment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auftragstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Company__c</fullName>
        <formula>Related_Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unternehmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Email__c</fullName>
        <formula>Related_Opportunity__r.Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Mail (Kunde)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Phone__c</fullName>
        <formula>Related_Opportunity__r.Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefonnummer (Kunde)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_Name__c</fullName>
        <label>Objekt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Legal_Account_Name__c</fullName>
        <formula>Related_Opportunity__r.Legal_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kanzlei</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Number__c</fullName>
        <formula>Related_Opportunity__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bearbeitungsnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Partner__c</fullName>
        <formula>Related_Opportunity__r.Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <formula>Related_Opportunity__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Sales_Type__c</fullName>
        <formula>TEXT(Related_Opportunity__r.Sales_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertriebstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_to_Cliam_Date__c</fullName>
        <formula>Related_Opportunity__r.Set_To_Claim_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Set to Cliam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Related_Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>Empfängeradresse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heute</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verf_gbarkeit__c</fullName>
        <formula>IF(INCLUDES( Related_Opportunity__r.Availability__c , "vormittags"), "vormittags" + BR() , NULL) + 
IF(INCLUDES( Related_Opportunity__r.Availability__c , "mittags"), "mittags" + BR() , NULL) + 
IF(INCLUDES( Related_Opportunity__r.Availability__c, "nachmittags"), "nachmittags" + BR() , NULL) + 
IF(INCLUDES( Related_Opportunity__r.Availability__c, "abends"), "abends", NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verfügbarkeit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activityImpID__c</fullName>
        <externalId>true</externalId>
        <label>activityImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oppID__c</fullName>
        <formula>Related_Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>oppID</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>ABAGS_Tasks_Krisztian_Lukacs</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>Overdue_Since__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Krisztian</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Lukacs</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Krisztian Lukacs</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABAGS_Tasks_Simon_Heilinglechner</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>H.</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Jäger</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>hjäger</value>
        </filters>
        <label>ABAGS_Tasks H.Jäger</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Andre_Bretall</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Andre</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Bretall</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>weitere Unterlagen,SERVICECENTER,Follow</value>
        </filters>
        <label>ABGAS_Tasks Andre Bretall</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Christel_Hermann</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Christel</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Hermann</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Christel Hermann</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Daniel_Asadzadeh</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Daniel</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Asadzadeh</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>weitere Unterlagen,SERVICECENTER,Follow</value>
        </filters>
        <label>ABGAS_Tasks Daniel Asadzadeh</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Daniel_Fattahe</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Daniel</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Fattahe</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>weitere Unterlagen,SERVICECENTER,Follow</value>
        </filters>
        <label>ABGAS_Tasks Daniel Fattahe</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Gabriele_Ramb</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Gabriele</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Ramb</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Gabriele Ramb</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Johann_Hoffmann</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Johann</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Hoffmann</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>weitere Unterlagen,SERVICECENTER,Follow</value>
        </filters>
        <label>ABGAS_Tasks Johann Hoffmann</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Maik_Waschke</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Maik</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Waschke</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Maik Waschke</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Marcel_Borchardt</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Marcel</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Borchardt</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Marcel Borchardt</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Marietta_Siebert</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>Related_Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Marietta</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Siebert</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Marietta Siebert</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Markus_Kurz</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Related_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Markus</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Kurz</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>ABGAS_Tasks Markus Kurz</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Martin_Hahn</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Martin</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Hahn</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>ABGAS_Tasks Martin Hahn</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Melanie_Wiersich</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Melanie</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Wiersich</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>weitere Unterlagen,SERVICECENTER,Follow</value>
        </filters>
        <label>ABGAS_Tasks Melanie Wiersich</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ABGAS_Tasks_Natalie_Pachmann</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Related_Opportunity_Number__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Related_Company__c</columns>
        <columns>Related_Opportunity_Partner__c</columns>
        <columns>Overdue_Since__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Natalie</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Pachmann</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open,On hold</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>weitere Unterlagen,SERVICECENTER,Follow</value>
        </filters>
        <label>ABGAS_Tasks Natalie Pachmann</label>
        <sharedTo>
            <group>Management_Team_Kathi</group>
        </sharedTo>
    </listViews>
</CustomObject>